--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 
 		<style>
 			* {
-				background-color: #151515;
+				background-color: #171717;
 				margin: 0 0 10px 0;
 				color: #f0f0f0;
 			}
@@ -59,11 +59,17 @@
 			button {
 				padding: 2px 2rem;
 				border-radius: 5px;
+				border: solid 1px #555555;
+			}
+
+			button:hover {
+				transition: 100ms;
+				background: #555555;
 			}
 
 			/* Anchor */
 			nav > a:hover {
-				transition: 100s;
+				transition: 100ms;
 				background: #555555;
 			}
 
