[feat] update current user in room

--- a/src/app.html
+++ b/src/app.html
@@ -119,12 +119,20 @@
 
 			tr:hover {
 				transition: 200ms;
-				background: #999999;
+				background: #666666;
 			}
 
 			tr:hover > td {
 				transition: 200ms;
-				background: #999999;
+				background: #666666;
+			}
+
+			tr:hover:active {
+				background: #bbbbbb;
+			}
+
+			tr:hover:active > td {
+				background: #bbbbbb;
 			}
 		</style>
 	</head>
