[fix] events were not adding user properly

--- a/src/app.html
+++ b/src/app.html
@@ -43,8 +43,8 @@
 				justify-content: center;
 				min-width: 400px;
 				width: 100%;
-				margin-left: 20%;
-				margin-right: 20%;
+				margin-left: 15%;
+				margin-right: 15%;
 			}
 
 			/* Error/del */
@@ -78,6 +78,10 @@
 				background: #555555;
 			}
 
+			button:active {
+				background: #666666;
+			}
+
 			button:disabled {
 				background: #222222;
 				color: #444444;
@@ -109,8 +113,13 @@
 				margin: 0;
 			}
 
+			td {
+				vertical-align: center;
+			}
+
 			tr {
 				text-align: start;
+				vertical-align: center;
 			}
 
 			tr:nth-child(even) {
