--- a/src/app.html
+++ b/src/app.html
@@ -153,6 +153,39 @@
 			tr:hover:active > td {
 				background: #bbbbbb;
 			}
+
+			td > input {
+				width: 90%;
+			}
+
+			/* forms */
+			form {
+				width: 100%;
+			}
+
+			form > br {
+				margin: 5px;
+			}
+
+			label > input[type=text] {
+				width: 50%;
+			}
+
+			label > select {
+				width: 50%;
+			}
+
+			form > table {
+				width: 50%;
+			}
+
+			input {
+				border-radius: 5px;
+			}
+
+			select {
+				border-radius: 5px;
+			}
 		</style>
 	</head>
 
