--- a/src/app.html
+++ b/src/app.html
@@ -169,10 +169,12 @@
 
 			label > input[type=text] {
 				width: 50%;
+				height: 1.25rem;
 			}
 
 			label > select {
 				width: 50%;
+				height: 1.5rem;
 			}
 
 			form > table {
